Filter cross button mobile fix

--- a/wp-content/plugins/algoliasearch-wordpress-master/themes/woo/styles.css
+++ b/wp-content/plugins/algoliasearch-wordpress-master/themes/woo/styles.css
@@ -1483,6 +1483,9 @@ border-right:none;
     .options{
         margin: 8px 0;
     }       
+    .filters-titl span:first-child{
+    padding: 0px;
+	}
 }
 
 @media screen and (max-width: 480px){
